<resources>
    <string name="app_name">WAZ</string>
    <string name="loading_failed">加载失败</string>
    <string name="loading_error">错误</string>
    <string name="loading_reload">重新加载</string>
    <string name="wel_delay">倒计时:5</string>
    <string name="nv_love">收藏</string>
    <string name="nv_todo">待办事项</string>
    <string name="nv_nignt">夜间模式</string>
    <string name="nv_settings">设置</string>
    <string name="nv_aboutus">关于我们</string>
    <string name="bv_first">首页</string>
    <string name="bv_project">项目</string>
    <string name="bv_navi">导航</string>
    <string name="bv_wechat">公众号</string>
    <string name="bv_know">知识体系</string>
    <string name="header_login">登录</string>
    <string name="header_say">说点什么吧</string>
    <string name="findmoer">发现更多干货</string>
    <string name="camera">拍摄头像</string>
    <string name="photo">从图库选取</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="nv_exits">退出登录</string>


</resources>
