<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item android:id="@+id/nv_love"
    android:checkable="true"
    android:icon="@drawable/ic_like_not"
    android:title="@string/nv_love"/>
    <item android:id="@+id/nv_todo"
    android:checkable="true"
    android:icon="@drawable/ic_todo_24dp"
    android:title="@string/nv_todo"/>
    <item android:id="@+id/nv_nignt"
    android:checkable="true"
    android:icon="@drawable/ic_night_24dp"
    android:title="@string/nv_nignt"/>
    <item android:id="@+id/nv_settings"
    android:checkable="true"
    android:icon="@drawable/ic_setting_24dp"
    android:title="@string/nv_settings"/>
    <item android:id="@+id/nv_aboutus"
    android:checkable="true"
    android:icon="@drawable/ic_about_us_white_24dp"
    android:title="@string/nv_aboutus"/>


    <item android:id="@+id/nv_exits"
    android:checkable="true"
    android:icon="@drawable/ic_logout_white_24dp"
    android:title="@string/nv_exits"/>

</menu>