<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/wan_project"
        android:padding="3dp"
        android:text="@string/nv_love"
        android:textColor="@color/Light_Blue"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toTopOf="@+id/wan_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wan_authorname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="14dp"
        android:text="@string/nv_aboutus"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@+id/wan"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wan_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wan_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/nv_love"
        android:textColor="@color/Black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/wan_iv"
        app:layout_constraintTop_toBottomOf="@+id/wan_time" />

    <ImageView
        android:id="@+id/wan_iv"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="11dp"
        android:scaleType="fitCenter"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wan_authorname"
         />

    <TextView
        android:id="@+id/wan_supername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="13dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wan_iv"
        app:layout_constraintTop_toBottomOf="@+id/wan_title" />

    <CheckBox
        android:id="@+id/wan_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/seletor_like"
        android:button="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="357dp" />

</androidx.constraintlayout.widget.ConstraintLayout>